Changed: video now retain data lazily when encoded. Added: default encoder is autodetermined.